<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basic_background"
    tools:context=".app.activity.LoginActivity">


    <ImageView
        android:id="@+id/login_slogan"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_login_logo" />


    <LinearLayout
        android:id="@+id/login_phone_num_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_phone_num_line"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:text="+ 86"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/splitDark" />

        <com.fiveoneofly.cgw.app.widget.EditText
            android:id="@+id/login_edit_phone"
            style="@style/EditTextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_enter_phone"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/login_clear"
            android:layout_width="17dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_clear_edit"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:id="@+id/login_phone_num_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/login_verifiy_code_layout"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#DBDBDB" />

    <RelativeLayout
        android:id="@+id/login_verifiy_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_verifiy_code_line"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">

        <com.fiveoneofly.cgw.app.widget.EditText
            android:id="@+id/login_edit_verifiy_code"
            style="@style/EditTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/login_verifiy_code"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_get_verifiy_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_voal_blue_select"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </RelativeLayout>

    <View
        android:id="@+id/login_verifiy_code_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/login_center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#DBDBDB" />

    <View
        android:id="@+id/login_center"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerInParent="true" />


    <Button
        android:id="@+id/login_btn"
        style="@style/ButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_center"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/login_or_register" />

    <LinearLayout
        android:id="@+id/login_agreement_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text1"
            android:textColor="@color/minorText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login_agreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_agreement_register"
            android:textColor="#47B5FF"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
